@@ -8,6 +8,7 @@ CHANGELOG
 = 2.0.4 =
 -------------------------------------------------
 * Fixed a bug when user can enroll in the course without paying to paid course.
+* Limiting facilitator role, from now on it can only edit allowed courses.
 
 = 2.0.3 =
 -------------------------------------------------
